--- a/templates/datamanagement/import_day_templates.html
+++ b/templates/datamanagement/import_day_templates.html
@@ -6,11 +6,11 @@
         <h3 class="light-blue-text text-darken-1">Import day templates</h3>
         <div class="card">
             <div class="card-content">
-                <div class="card-title light-blue-text text-darken-1">Before you start</div>
+                <div class="card-title">Before you start</div>
                 <p>Please structure your data in the following manner:</p>
                 <p><b>Worksheet "Templates"</b></p>
                 <table class="striped">
-                    <thead>
+                    <thead class="grey darken-1 white-text">
                         <th>Name</th>
                         <th>Description</th>
                     </thead>
@@ -18,7 +18,7 @@
                 <p>Name is required and has to be unique. Description is optional.</p>
                 <br><p><b>Worksheet "Shifts"</b></p>
                 <table class="striped">
-                    <thead>
+                    <thead class="grey darken-1 white-text">
                         <th>Template</th>
                         <th>Shift</th>
                     </thead>
