--- a/templates/datamanagement/import_departments.html
+++ b/templates/datamanagement/import_departments.html
@@ -6,11 +6,11 @@
         <h3 class="light-blue-text text-darken-1">Import departments</h3>
         <div class="card">
             <div class="card-content">
-                <div class="card-title light-blue-text text-darken-1">Before you start</div>
+                <div class="card-title">Before you start</div>
                 <p>Please structure your data in the following manner:</p>
                 <p><b>Worksheet "Shifts"</b></p>
                 <table class="striped">
-                    <thead>
+                    <thead class="grey darken-1 white-text">
                         <th>Name</th>
                         <th>Description</th>
                     </thead>
@@ -18,7 +18,7 @@
                 <p>Datasets where name already exists will be updated</p>
                 <br><p><b>Worksheet "Qualifications"</b></p>
                 <table class="striped">
-                    <thead>
+                    <thead class="grey darken-1 white-text">
                         <th>Department</th>
                         <th>Qualification</th>
                     </thead>
