--- a/templates/datamanagement/import_shift_templates.html
+++ b/templates/datamanagement/import_shift_templates.html
@@ -6,11 +6,11 @@
         <h3 class="light-blue-text text-darken-1">Import shift templates</h3>
         <div class="card">
             <div class="card-content">
-                <div class="card-title light-blue-text text-darken-1">Before you start</div>
+                <div class="card-title">Before you start</div>
                 <p>Please structure your data in the following manner:</p>
                 <p><b>Worksheet "Shifts"</b></p>
                 <table class="striped">
-                    <thead>
+                    <thead class="grey darken-1 white-text">
                         <th>Name</th>
                         <th>Department</th>
                         <th>Start</th>
@@ -23,7 +23,7 @@
                 <p>Start, End and Time have to be formatted "HH:mm"</p>
                 <br><p><b>Worksheet "Qualifications"</b></p>
                 <table class="striped">
-                    <thead>
+                    <thead class="grey darken-1 white-text">
                         <th>Shift</th>
                         <th>Qualification</th>
                     </thead>
