--- a/templates/datamanagement/import_users.html
+++ b/templates/datamanagement/import_users.html
@@ -6,11 +6,11 @@
         <h3 class="light-blue-text text-darken-1">Import departments</h3>
         <div class="card">
             <div class="card-content">
-                <div class="card-title light-blue-text text-darken-1">Before you start</div>
+                <div class="card-title">Before you start</div>
                 <p>Please structure your data in the following manner:</p>
                 <p><b>Worksheet "Users"</b></p>
                 <table class="striped">
-                    <thead>
+                    <thead class="grey darken-1 white-text">
                         <th>First Name</th>
                         <th>Last Name</th>
                         <th>E-Mail</th>
@@ -39,7 +39,7 @@
                 <p>Default password will be set to "H4cKm3!fY0uC4n". Users can obtain a password reset by requesting it entering their E-Mail</p>
                 <br><p><b>Worksheet "Qualifications"</b></p>
                 <table class="striped">
-                    <thead>
+                    <thead class="grey darken-1 white-text">
                         <th>Username</th>
                         <th>Qualification</th>
                     </thead>
