--- a/templates/availabilities/availability_list.html
+++ b/templates/availabilities/availability_list.html
@@ -48,7 +48,7 @@
         <div class="card">
             <div class="card-content">
                 <table class="striped highlight responsive-table">
-                    <thead class="light-blue-text text-darken-1">
+                    <thead class="grey darken-1 white-text">
                         <tr>
                             <th>Weekday</th>
                             <th>Available</th>
