--- a/templates/datamanagement/datamanagement.html
+++ b/templates/datamanagement/datamanagement.html
@@ -6,7 +6,7 @@
         <h3 class="light-blue-text text-darken-1">Data management</h3>
         <div class="card">
             <div class="card-content">
-                <div class="card-title light-blue-text text-darken-1">Imports</div>
+                <div class="card-title">Imports</div>
                 <ul class="collection">
                     <li class="collection-item avatar">
                         <a class="black-text" href="{% url 'import_qualifications' %}">
