--- a/templates/datamanagement/import_wishes.html
+++ b/templates/datamanagement/import_wishes.html
@@ -6,10 +6,10 @@
         <h3 class="light-blue-text text-darken-1">Import wishes</h3>
         <div class="card">
             <div class="card-content">
-                <div class="card-title light-blue-text text-darken-1">Before you start</div>
+                <div class="card-title">Before you start</div>
                 <p>Please structure your data in the following manner:</p>
                 <table class="striped">
-                    <thead>
+                    <thead class="grey darken-1 white-text">
                         <th>Username</th>
                         <th>Date</th>
                         <th>Start</th>
