--- a/templates/dayTemplates/day_template_detail.html
+++ b/templates/dayTemplates/day_template_detail.html
@@ -55,9 +55,9 @@
         </div>
         <div class="card">
             <div class="card-content">
-                <div class="card-title light-blue-text text-darken-1"><b>Assigned shift templates</b></div>
+                <div class="card-title"><b>Assigned shift templates</b></div>
                 <table class="striped highlight responsive-table">
-                    <thead class="light-blue-text text-darken-1">
+                    <thead class="grey darken-1 white-text">
                         <tr>
                             <th>Name</th>
                             <th>Start</th>
@@ -81,7 +81,7 @@
                                 </td>
                                 <td>
                                     {{ entry.shift_template.get_work_hours|date:"H:i" }}<br>
-                                    {{ entry.shift_template.break_duration|date:"H:i" }}
+                                    <span class="grey-text text-darken-1">{{ entry.shift_template.break_duration|date:"H:i" }}</span>
                                 </td>
                                 <td>
                                     {{ entry.shift_template.department }}<br>
