--- a/templates/dayTemplates/edit_day_template.html
+++ b/templates/dayTemplates/edit_day_template.html
@@ -18,7 +18,7 @@
             <div class="modal-content">
                 <h5 class="light-blue-text text-darken-1"><b>Assign Shift to {{ selected_day_template }}</b></h5>
                 <table class="striped highlight responsive-table">
-                    <thead class="light-blue-text text-darken-1">
+                    <thead class="grey darken-1 white-text">
                         <tr>
                             <th>Name</th>
                             <th>Start</th>
@@ -43,7 +43,7 @@
                                 </td>
                                 <td>
                                     {{ shift_template.get_work_hours|date:"H:i" }}<br>
-                                    {{ shift_template.break_duration|date:"H:i" }}
+                                    <span class="grey-text text-darken-1">{{ shift_template.break_duration|date:"H:i" }}</span>
                                 </td>
                                 <td>
                                     {{ shift_template.department }}<br>
@@ -94,9 +94,9 @@
         </div>
         <div class="card">
             <div class="card-content">
-                <div class="card-title light-blue-text text-darken-1"><b>Assigned shift templates</b></div>
+                <div class="card-title"><b>Assigned shift templates</b></div>
                 <table class="striped highlight responsive-table">
-                    <thead class="light-blue-text text-darken-1">
+                    <thead class="grey darken-1 white-text">
                         <tr>
                             <th>Name</th>
                             <th>Start</th>
@@ -121,7 +121,7 @@
                                 </td>
                                 <td>
                                     {{ entry.shift_template.get_work_hours|date:"H:i" }}<br>
-                                    {{ entry.shift_template.break_duration|date:"H:i" }}
+                                    <span class="grey-text text-darken-1">{{ entry.shift_template.break_duration|date:"H:i" }}</span>
                                 </td>
                                 <td>
                                     {{ entry.shift_template.department }}<br>
