--- a/templates/demand/demand_list.html
+++ b/templates/demand/demand_list.html
@@ -43,7 +43,7 @@
         <div class="card">
             <div class="card-content">
                 <table class="striped highlight responsive-table">
-                    <thead class="light-blue-text text-darken-1">
+                    <thead class="grey darken-1 white-text">
                         <tr>
                             <th>Department</th>
                             <th>Weekday</th>
