--- a/templates/departments/department_list.html
+++ b/templates/departments/department_list.html
@@ -8,7 +8,7 @@
         <div class="card">
             <div class="card-content">
                 <table class="striped highlight responsive-table">
-                    <thead class="light-blue-text text-darken-1">
+                    <thead class="grey darken-1 white-text">
                         <tr>
                             <th>Name</th>
                             <th>Description</th>
@@ -57,7 +57,7 @@
                             {% endif %}
                         </tr>
                         {% endfor %}
-                        <tr class="grey lighten-3">
+                        <tr class="grey darken-1 white-text">
                             <td><b>Total</b><br>{{ all_entries.count }} departments</td>
                             <td></td>
                             <td></td>
