--- a/templates/holidays/own_holidays.html
+++ b/templates/holidays/own_holidays.html
@@ -8,7 +8,7 @@
         <div class="card">
             <div class="card-content">
                 <table class="striped highlight responsive-table">
-                    <thead class="light-blue-text text-darken-1">
+                    <thead class="grey darken-1 white-text">
                         <tr>
                             <th>Start date</th>
                             <th>End date</th>
