--- a/templates/qualifications/qualification_detail.html
+++ b/templates/qualifications/qualification_detail.html
@@ -47,9 +47,9 @@
         {% if associated_departments.count > 0 %}
             <div class="card">
                 <div class="card-content">
-                    <div class="card-title light-blue-text text-darken-1"><b>Associated Departments ({{ associated_departments.count }})</b></div>
+                    <div class="card-title"><b>Associated Departments ({{ associated_departments.count }})</b></div>
                     <table class="striped highlight responsive-table">
-                        <thead class="light-blue-text text-darken-1">
+                        <thead class="grey darken-1 white-text">
                             <tr>
                                 <th>Department</th>
                                 <th>Description</th>
@@ -73,9 +73,9 @@
         {% if associated_employees.count > 0 %}
             <div class="card">
                 <div class="card-content">
-                    <div class="card-title light-blue-text text-darken-1"><b>Associated Employees ({{ associated_employees.count }})</b></div>
+                    <div class="card-title"><b>Associated Employees ({{ associated_employees.count }})</b></div>
                     <table class="striped highlight responsive-table">
-                        <thead class="light-blue-text text-darken-1">
+                        <thead class="grey darken-1 white-text">
                             <tr>
                                 <th>First Name<br>Last Name</th>
                                 <th>External</th>
