--- a/templates/shifts/shift_list.html
+++ b/templates/shifts/shift_list.html
@@ -35,7 +35,7 @@
         <div class="card">
             <div class="card-content">
                 <table class="striped highlight responsive-table">
-                    <thead class="light-blue-text text-darken-1">
+                    <thead class="grey darken-1 white-text">
                         <tr>
                             <th>Date<br>Time</th>
                             <th>Work hours<br>Break</th>
