--- a/templates/shifts/work_hours.html
+++ b/templates/shifts/work_hours.html
@@ -45,9 +45,9 @@
         {% if search == True and data != None %}
             <div class="card">
                 <div class="card-content">
-                    <div class="card-title light-blue-text text-darken-1"><b>Overview work hours of {{ employee }}</b></div>
+                    <div class="card-title"><b>Overview work hours of {{ employee }}</b></div>
                     <table class="striped highlight responsive-table">
-                        <thead class="light-blue-text text-darken-1">
+                        <thead class="grey darken-1 white-text">
                             <tr>
                                 <th>Calendar week</th>
                                 <th>Start</th>
@@ -66,7 +66,7 @@
                                     <td>{{ week.work_hours }}/{{ employee.work_hours }} hours</td>
                                 </tr>
                             {% endfor %}
-                            <tr class="grey lighten-3">
+                            <tr class="grey darken-1 white-text">
                                 <td colspan="3"><b>Total</b><br>{{ weeks|length }} weeks</td>
                                 <td>{{ shift_count_total }} shifts</td>
                                 <td>{{ work_hours_total }}/{{ target_hours }} hours</td>
