--- a/templates/users/employee_list.html
+++ b/templates/users/employee_list.html
@@ -29,7 +29,7 @@
         <div class="card">
             <div class="card-content">
                 <table class="striped highlight responsive-table">
-                    <thead class="light-blue-text text-darken-1">
+                    <thead class="grey darken-1 white-text">
                         <tr>
                             <th>First Name<br>Last Name</th>
                             <th>Active<br>External</th>
