--- a/templates/holidays/holiday_list.html
+++ b/templates/holidays/holiday_list.html
@@ -99,7 +99,7 @@
                         {% endfor %}
                     </tbody>
                 </table>
-                {% if search and data.filter_date != '' %}
+                {% if search and timeline != None %}
                     <br><img class="materialboxed" src='data:image/png;base64,{{ timeline }}' style="max-width: 100%">
                 {% endif %}
             </div>
