data exports wip

--- a/templates/datamanagement/datamanagement.html
+++ b/templates/datamanagement/datamanagement.html
@@ -86,6 +86,17 @@
                         </a>
                     </li>
                 </ul>
+
+                <div class="card-title">Exports</div>
+                <ul class="collection">
+                    <li class="collection-item avatar">
+                        <a class="black-text" href="{% url 'download_exports' %}">
+                            <i class="material-icons circle light-blue darken-1 white-text">download</i>
+                            <span class="title">Download exports</span>
+                            <p class="grey-text text-darken-3">Export everything to .xlsx file for download</p>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     {% else %}
