data exports done

--- a/templates/datamanagement/datamanagement.html
+++ b/templates/datamanagement/datamanagement.html
@@ -92,8 +92,8 @@
                     <li class="collection-item avatar">
                         <a class="black-text" href="{% url 'download_exports' %}">
                             <i class="material-icons circle light-blue darken-1 white-text">download</i>
-                            <span class="title">Download exports</span>
-                            <p class="grey-text text-darken-3">Export everything to .xlsx file for download</p>
+                            <span class="title">Create export</span>
+                            <p class="grey-text text-darken-3">Export everything to .xlsx file</p>
                         </a>
                     </li>
                 </ul>
