--- a/templates/holidays/edit_own_holiday.html
+++ b/templates/holidays/edit_own_holiday.html
@@ -21,7 +21,7 @@
                             <textarea name="note" autocapitalize="none" id="id_note" class="materialize-textarea grey-text text-darken-4">{{ selected_holiday.note }}</textarea>
                         </div>
                     </div>
-                    <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">edit</i>Edit holiday</button>
+                    <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">edit</i>Update holiday</button>
                 </div>
             </form>
         </div>
