--- a/templates/qualifications/edit_qualification.html
+++ b/templates/qualifications/edit_qualification.html
@@ -41,7 +41,7 @@
                             <textarea name="description" autocapitalize="none" id="id_description" class="materialize-textarea grey-text text-darken-4">{{ selected_qualification.description }}</textarea>
                         </div>
                     </div>
-                    <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">edit</i>Edit qualification</button>
+                    <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">edit</i>Update qualification</button>
                     <a class="modal-trigger waves-effect waves-light btn-flat red-text text-darken-1" data-target="delete-modal"><i class="material-icons left">delete_forever</i>Delete</a>
                 </div>
             </form>
