--- a/templates/absences/edit_absence.html
+++ b/templates/absences/edit_absence.html
@@ -124,7 +124,7 @@
                         </table><br><br>
                     {% endif %}
 
-                    <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">edit</i>Edit absence</button>
+                    <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">edit</i>Update absence</button>
                     <a class="modal-trigger waves-effect waves-light btn-flat red-text text-darken-1" data-target="delete-modal"><i class="material-icons left">delete_forever</i>Delete</a>
                 </div>
             </form>
