--- a/templates/absences/edit_own_absence.html
+++ b/templates/absences/edit_own_absence.html
@@ -21,7 +21,7 @@
                             <textarea name="note" autocapitalize="none" id="id_note" class="materialize-textarea grey-text text-darken-4">{{ selected_absence.note }}</textarea>
                         </div>
                     </div>
-                    <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">edit</i>Edit absence</button>
+                    <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">edit</i>Update absence</button>
                 </div>
             </form>
         </div>
