--- a/templates/dayTemplates/edit_day_template.html
+++ b/templates/dayTemplates/edit_day_template.html
@@ -87,7 +87,7 @@
                             <textarea name="description" autocapitalize="none" id="id_description" class="materialize-textarea grey-text text-darken-4">{{ selected_day_template.description }}</textarea>
                         </div>
                     </div>
-                    <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">edit</i>Edit day template</button>
+                    <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">edit</i>Update day template</button>
                     <a class="modal-trigger waves-effect waves-light btn-flat red-text text-darken-1" data-target="delete-modal"><i class="material-icons left">delete_forever</i>Delete</a>
                 </div>
             </form>
